# cppwg

./: .flake8  .gitignore  README.md  pyproject.toml  setup.cfg
.github/workflows/: build-and-test.yml  test-cells-conda.yml  test-cells-ubuntu.yml  test-cells.yml  test-shapes-pip.yml  test-shapes.yml  test-style.yml  test-typecasters.yml
cppwg/: __init__.py  __main__.py  generators.py  version.py
cppwg/info/: base_info.py  class_info.py  cpp_entity_info.py  cpp_type_info.py  free_function_info.py  method_info.py  module_info.py  package_info.py  variable_info.py
cppwg/input/: base_info.py  class_info.py  cpp_type_info.py  free_function_info.py  info_helper.py  method_info.py  module_info.py  package_info.py  variable_info.py
cppwg/parsers/: package_info_parser.py  source_parser.py
cppwg/templates/: pybind11_default.py
cppwg/utils/: constants.py  utils.py
cppwg/writers/: base_writer.py  class_writer.py  constructor_writer.py  free_function_writer.py  header_collection_writer.py  method_writer.py  module_writer.py  package_writer.py
examples/cells/: CMakeLists.txt  pyproject.toml  requirements.txt  setup.cfg  setup.py
examples/cells/cmake/: FindPETSc.cmake  FindPETSc4py.cmake
examples/cells/conda/: requirements.txt
examples/cells/conda-recipe/: build.sh  meta.yaml
examples/cells/conda/recipe/: build.sh  meta.yaml
examples/cells/conda/variants/: python3.10.yaml  python3.11.yaml  python3.12.yaml  python3.13.yaml  python3.8.yaml  python3.9.yaml
examples/cells/dynamic/: config.yaml
examples/cells/dynamic/typecasters/: PybindUblasTypeCaster.hpp
examples/cells/dynamic/wrappers/: wrapper_header_collection.cppwg.hpp
examples/cells/dynamic/wrappers/all/: AbstractMesh_2_2.cppwg.cpp  AbstractMesh_2_2.cppwg.hpp  AbstractMesh_3_3.cppwg.cpp  AbstractMesh_3_3.cppwg.hpp  Cell.cppwg.cpp  Cell.cppwg.hpp  MeshFactory_PottsMesh_2.cppwg.cpp  MeshFactory_PottsMesh_2.cppwg.hpp  MeshFactory_PottsMesh_3.cppwg.cpp  MeshFactory_PottsMesh_3.cppwg.hpp  Node_2.cppwg.cpp  Node_2.cppwg.hpp  Node_3.cppwg.cpp  Node_3.cppwg.hpp  PetscUtils.cppwg.cpp  PetscUtils.cppwg.hpp  PottsMesh_2.cppwg.cpp  PottsMesh_2.cppwg.hpp  PottsMesh_3.cppwg.cpp  PottsMesh_3.cppwg.hpp  Scene_2.cppwg.cpp  Scene_2.cppwg.hpp  Scene_3.cppwg.cpp  Scene_3.cppwg.hpp  _pycells_all.main.cppwg.cpp
examples/cells/src/cpp/cell/: Cell.cpp  Cell.hpp
examples/cells/src/cpp/mesh/: AbstractMesh.cpp  AbstractMesh.hpp  MeshFactory.cpp  MeshFactory.hpp  Node.cpp  Node.hpp  PottsMesh.cpp  PottsMesh.hpp
examples/cells/src/cpp/typecasters/: PybindPETScTypeCaster.hpp
examples/cells/src/cpp/utils/: PetscUtils.cpp  PetscUtils.hpp
examples/cells/src/cpp/visualization/: Scene.cpp  Scene.hpp
examples/cells/src/py/cells/mesh/: __init__.py
examples/cells/src/py/pycells/: __init__.py  _syntax.py
examples/cells/src/py/test/: test_cells.py
examples/cells/tests/: test_cells.py
examples/shapes/: CMakeLists.txt
examples/shapes/src/cpp/geometry/: Point.hpp
examples/shapes/src/cpp/math_funcs/: SimpleMathFunctions.hpp
examples/shapes/src/cpp/mesh/: ConcreteMesh.hpp
examples/shapes/src/cpp/primitives/: Rectangle.hpp  Shape.cpp  Square.cpp  Square.hpp
examples/shapes/src/geometry/: Point.cpp  Point.hpp
examples/shapes/src/mesh/: AbstractMesh.cpp  AbstractMesh.hpp  Mesh.cpp  Mesh.hpp  MeshFactory.cpp  MeshFactory.hpp
examples/shapes/src/primitives/: Cuboid.hpp  Rectangle.cpp  Rectangle.hpp  Shape.hpp  Triangle.cpp  Triangle.hpp
examples/shapes/src/py/pyshapes/: _syntax.py
examples/shapes/src/py/pyshapes/geometry/: __init__.py
examples/shapes/src/py/pyshapes/mesh/: __init__.py
examples/shapes/src/py/pyshapes/primitives/: __init__.py
examples/shapes/src/py/test/: test_classes.py
examples/shapes/src/py/tests/: test_classes.py  test_functions.py
examples/shapes/src/python/pyshapes/mesh/: __init__.py
examples/shapes/src/python/test/: test_classes.py
examples/shapes/wrapper/: package_info.yaml  wrapper_header_collection.cppwg.hpp  wrapper_header_collection.hpp
examples/shapes/wrapper/geometry/: Point2.cppwg.cpp  Point2.cppwg.hpp  Point3.cppwg.cpp  Point3.cppwg.hpp  Point_2.cppwg.cpp  Point_2.cppwg.hpp  Point_3.cppwg.cpp  Point_3.cppwg.hpp  _pyshapes_geometry.main.cppwg.cpp  geometry.main.cpp
examples/shapes/wrapper/math_funcs/: _pyshapes_math_funcs.main.cppwg.cpp  math_funcs.main.cpp
examples/shapes/wrapper/mesh/: AbstractMesh2_2.cppwg.cpp  AbstractMesh2_2.cppwg.hpp  AbstractMesh3_3.cppwg.cpp  AbstractMesh3_3.cppwg.hpp  AbstractMesh_2_2.cppwg.cpp  AbstractMesh_2_2.cppwg.hpp  AbstractMesh_3_3.cppwg.cpp  AbstractMesh_3_3.cppwg.hpp  ConcreteMesh2.cppwg.cpp  ConcreteMesh2.cppwg.hpp  ConcreteMesh3.cppwg.cpp  ConcreteMesh3.cppwg.hpp  ConcreteMesh_2.cppwg.cpp  ConcreteMesh_2.cppwg.hpp  ConcreteMesh_3.cppwg.cpp  ConcreteMesh_3.cppwg.hpp  MeshFactoryConcreteMesh2.cppwg.cpp  MeshFactoryConcreteMesh2.cppwg.hpp  MeshFactoryConcreteMesh3.cppwg.cpp  MeshFactoryConcreteMesh3.cppwg.hpp  _pyshapes_mesh.main.cppwg.cpp  mesh.main.cpp
examples/shapes/wrapper/primitives/: Cuboid.cppwg.cpp  Cuboid.cppwg.hpp  Rectangle.cppwg.cpp  Rectangle.cppwg.hpp  Shape2.cppwg.cpp  Shape2.cppwg.hpp  Shape3.cppwg.cpp  Shape3.cppwg.hpp  Shape_2.cppwg.cpp  Shape_2.cppwg.hpp  Shape_3.cppwg.cpp  Shape_3.cppwg.hpp  _pyshapes_primitives.main.cppwg.cpp  primitives.main.cpp
test/: test_wrapper_generation.py
tests/: test_shapes.py  test_wrapper_generation.py
