[metadata]
name = cppwg
version = 0.3.4
author = Chaste Developers
author_email = chaste-users@maillist.ox.ac.uk
description = An automatic Python wrapper generator for C++ code
long_description = file: README.md
keywords = C++, Python, pybind11
license = BSD-3-Clause
classifiers =
    Development Status :: 4 - Beta
    Environment :: Console
    Intended Audience :: Developers
    Operating System :: MacOS :: MacOS X
    Operating System :: Microsoft :: Windows
    Operating System :: POSIX
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
    Programming Language :: Python :: Implementation :: CPython
    Topic :: Software Development

project_urls =
    Source Code = https://github.com/Chaste/cppwg/

[options]
zip_safe = False
packages = find:
python_requires = >=3.8
install_requires =
    pyyaml>=6.0
    pygccxml>=2.2

[options.entry_points]
console_scripts =
    cppwg = cppwg.__main__:main

[options.extras_require]
dev =
    black
    flake8
    flake8-bugbear
    flake8-docstrings
    isort

docs =
    sphinx
    sphinx-rtd-theme
    numpydoc
